crates/pack/tests/compile_fail/fact_actor_new_without_feature.stderr
error[E0599]: no associated function or constant named `construct` found for struct `FactActor` in the current scope
 --> tests/compile_fail/fact_actor_new_without_feature.rs:6:24
  |
6 |     let _ = FactActor::construct("converge-engine", FactActorKind::System);
  |                        ^^^^^^^^^ associated function or constant not found in `FactActor`
  |
note: if you're trying to build a new `FactActor`, consider using `FactActor::new_projection` which returns `FactActor`
 --> src/fact.rs
  |
  |     pub fn new_projection(id: impl Into<ActorId>, kind: FactActorKind) -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
